// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render is webview should match snapshot 1`] = `
<div>
  <RankType
    onRankTypeClick={[Function]}
    ranks={
      Array [
        "gastby",
        "diva",
        "sunshine",
      ]
    }
    selectedRankType="sunshine"
  />
  <RankPeriod
    onRankPeriodClick={[Function]}
    periods={
      Array [
        "daily",
        "weekly",
        "monthly",
      ]
    }
    selectedRankPeriod="weekly"
  />
  <div
    className="rank-container"
  >
    <RankItemTop
      bg="bg_first_gastby_ranking.svg"
      key="rankitem123"
      name="myname"
      rankNumber={1}
      stars={123}
    />
    <RankItemTop
      bg="bg_second_ranking.svg"
      key="rankitem123"
      name="myname"
      rankNumber={2}
      stars={123}
    />
    <RankItemTop
      bg="bg_third_ranking.svg"
      key="rankitem123"
      name="myname"
      rankNumber={3}
      stars={123}
    />
    <RankItem
      key="rankitem123"
      name="myname"
      rankNumber={4}
      stars={123}
    />
    <RankItem
      key="rankitem123"
      name="myname"
      rankNumber={5}
      stars={123}
    />
    <RankItem
      key="rankitem123"
      name="myname"
      rankNumber={6}
      stars={123}
    />
    <RankItem
      key="rankitem123"
      name="myname"
      rankNumber={7}
      stars={123}
    />
    <RankItem
      key="rankitem123"
      name="myname"
      rankNumber={8}
      stars={123}
    />
    <RankItem
      key="rankitem123"
      name="myname"
      rankNumber={9}
      stars={123}
    />
    <RankItem
      key="rankitem123"
      name="myname"
      rankNumber={10}
      stars={123}
    />
  </div>
</div>
`;

exports[`render non webview should match snapshot 1`] = `
<TestHeader>
  <div>
    <RankType
      onRankTypeClick={[Function]}
      ranks={
        Array [
          "gastby",
          "diva",
          "sunshine",
        ]
      }
      selectedRankType="sunshine"
    />
    <RankPeriod
      onRankPeriodClick={[Function]}
      periods={
        Array [
          "daily",
          "weekly",
          "monthly",
        ]
      }
      selectedRankPeriod="weekly"
    />
    <div
      className="rank-container"
    >
      <RankItemTop
        bg="bg_first_gastby_ranking.svg"
        key="rankitem123"
        name="myname"
        rankNumber={1}
        stars={123}
      />
      <RankItemTop
        bg="bg_second_ranking.svg"
        key="rankitem123"
        name="myname"
        rankNumber={2}
        stars={123}
      />
      <RankItemTop
        bg="bg_third_ranking.svg"
        key="rankitem123"
        name="myname"
        rankNumber={3}
        stars={123}
      />
      <RankItem
        key="rankitem123"
        name="myname"
        rankNumber={4}
        stars={123}
      />
      <RankItem
        key="rankitem123"
        name="myname"
        rankNumber={5}
        stars={123}
      />
      <RankItem
        key="rankitem123"
        name="myname"
        rankNumber={6}
        stars={123}
      />
      <RankItem
        key="rankitem123"
        name="myname"
        rankNumber={7}
        stars={123}
      />
      <RankItem
        key="rankitem123"
        name="myname"
        rankNumber={8}
        stars={123}
      />
      <RankItem
        key="rankitem123"
        name="myname"
        rankNumber={9}
        stars={123}
      />
      <RankItem
        key="rankitem123"
        name="myname"
        rankNumber={10}
        stars={123}
      />
    </div>
  </div>
</TestHeader>
`;
